Fix wrapping checkboxes

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,12 +22,12 @@ mat-checkbox {
 }
 
 .mat-checkbox-layout {
-  margin: 30px 0px;
+  margin: 20px 0px;
 }
 
 mat-card {
   margin: 5px;
-  background: grey
+  background: grey;
 }
 
 button {
@@ -71,7 +71,6 @@ section {
   align-content: center;
   align-items: center;
   min-height: 64px;
-  padding: 10px;
   width: 100%;
 }
 
